syntax = "proto3";
package top.dzou.grpc;
option optimize_for = SPEED;
option java_package = "top.dzou.grpc";
option java_outer_classname = "MyDataInfo";


service MyService{
     rpc GetRealNameByUserName(MyRequest) returns (MyResponse){}
}
message MyRequest{
     string username = 1;
}
message MyResponse{
     string realname = 2;
}